# Holanc

./: .commitmsg  .env.example  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
app/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/bridge/: page.tsx
app/src/app/compliance/: page.tsx
app/src/app/deposit/: page.tsx
app/src/app/stealth/: page.tsx
app/src/app/transfer/: page.tsx
app/src/app/withdraw/: page.tsx
app/src/components/: Header.tsx  shared.tsx
app/src/hooks/: useChain.ts  useEvmHolanc.ts  useHolanc.ts  useSolanaHolanc.ts
app/src/providers/: ChainProvider.tsx  EvmWalletProvider.tsx  WalletProvider.tsx
circuits/deposit/: deposit.circom
circuits/lib/: common.circom
circuits/stealth_transfer/: stealth_transfer.circom
circuits/stealth_transfer_v2/: stealth_transfer_v2.circom
circuits/transfer/: transfer.circom
circuits/transfer_4x4/: transfer_4x4.circom
circuits/transfer_v2/: transfer_v2.circom
circuits/wealth_proof/: wealth_proof.circom
circuits/withdraw/: withdraw.circom
circuits/withdraw_4x4/: withdraw_4x4.circom
circuits/withdraw_v2/: withdraw_v2.circom
circuits/withdraw_v2_4x4/: withdraw_v2_4x4.circom
contracts/evm/: README.md  foundry.toml
contracts/evm/script/: DeployHolanc.s.sol  InitializeVerifierKey.s.sol
contracts/evm/src/: HolancBridge.sol  HolancCompliance.sol  HolancNullifier.sol  HolancPool.sol  HolancVerifier.sol
contracts/evm/test/: HolancBridge.t.sol  HolancCompliance.t.sol  HolancNullifier.t.sol  HolancPool.t.sol  HolancVerifier.t.sol
crates/holanc-cli/: Cargo.toml
crates/holanc-cli/src/: main.rs
crates/holanc-client/: Cargo.toml
crates/holanc-client/src/: lib.rs
crates/holanc-note/: Cargo.toml
crates/holanc-note/src/: encryption.rs  keys.rs  lib.rs  note.rs  stealth.rs
crates/holanc-primitives/: Cargo.toml
crates/holanc-primitives/src/: commitment.rs  envelope.rs  lib.rs  nullifier.rs  poseidon.rs
crates/holanc-prover/: Cargo.toml
crates/holanc-prover/src/: inputs.rs  lib.rs
crates/holanc-tree/: Cargo.toml
crates/holanc-tree/src/: lib.rs
deploy/: Dockerfile.indexer  Dockerfile.relayer  docker-compose.yml
docs/: api-reference.md  architecture.md  circuit-constraints.md  cross-chain-privacy.md  getting-started.md  protocol.md  stealth-addresses.md  threat-model.md  trusted-setup.md
indexer/: package-lock.json  package.json
indexer/src/: evm-scanner.ts  replicated-store.ts  scanner.ts  server.ts  store.ts
indexer/tests/: replicated-store.test.ts  store.test.ts
migrations/: deploy.ts
programs/holanc-bridge/: Cargo.toml
programs/holanc-bridge/src/: lib.rs
programs/holanc-compliance/: Cargo.toml
programs/holanc-compliance/src/: lib.rs
programs/holanc-nullifier/: Cargo.toml  keypair.json
programs/holanc-nullifier/src/: lib.rs
programs/holanc-pool/: Cargo.toml  keypair.json
programs/holanc-pool/src/: lib.rs
programs/holanc-verifier/: Cargo.toml  keypair.json
programs/holanc-verifier/src/: lib.rs
relayer/: package-lock.json  package.json
relayer/src/: batcher.ts  evm-relayer.ts  fees.ts  jitter.ts  server.ts
relayer/tests/: relayer.test.ts
scripts/: deploy-evm.sh  dev-setup.sh  setup-circuits.sh
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: bridge.ts  circomlibjs.d.ts  client.ts  compliance.ts  encryption.ts  index.ts  poseidon.test.ts  poseidon.ts  prover.ts  rpc.test.ts  rpc.ts  snarkjs.d.ts  stealth.test.ts  stealth.ts  types.ts  wallet.test.ts  wallet.ts
sdk/typescript/src/adapters/: evm.ts  factory.ts  index.ts  solana.ts  types.ts
tests/: holanc.ts
tests/anchor/: bridge.test.ts  compliance.test.ts  nullifier-bitmap-collision.test.ts  nullifier.test.ts  pool.test.ts  programs.test.ts  verifier.test.ts
tests/circuits/: constraint.test.ts  structure.test.ts
tests/e2e/: full-flow.test.ts  proof-flow.test.ts  sdk.test.ts
