[workspace]
members = [
    "programs/*",
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Soul-Research-Labs/Holanc"

[workspace.dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
solana-program = "2.1"
ark-bn254 = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
light-poseidon = "0.2"
sha2 = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_core = "0.6"
zeroize = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = "0.10"
hex = "0.4"
bs58 = "0.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
