[package]
name = "holanc-pool"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "holanc_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
holanc-verifier = { path = "../holanc-verifier", features = ["cpi"] }
solana-hash = "2.3"
solana-sha256-hasher = "2.3"
